# acb

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
backend/: Dockerfile  manage.py  pyproject.toml
backend/base/: settings.py  urls.py
backend/clients/: acb.py
backend/match_event/: admin.py  apps.py  models.py  serializers.py  views.py
backend/match_event/migrations/: 0001_initial.py  0002_matchevent_game_id.py
backend/tests/clients/: test_acb.py
backend/tests/fixtures/: match_events.json
backend/tests/integration/clients/: test_acb.py
backend/tests/integration/match_event/: test_views.py
backend/tests/match_event/: test_views.py
backend/tests/unit/clients/: test_acb.py
